<select> component UI bugfixes (#37)
- correctly truncate lengthy strings in `media` items
- fix default dropdown caret position so it aligns with dropdown trigger

--- a/quartz-js/components/select/styles/select.scss
+++ b/quartz-js/components/select/styles/select.scss
@@ -121,10 +121,10 @@
   .c-select--dropdown {
     &:after, &:before {
       bottom: 100%;
-      right: 22px;
+      right: 11px;
     }
     &:before {
-      right: 23px;
+      right: 12px;
     }
   }
 }
@@ -189,7 +189,7 @@
     max-width: 30%;
   }
   .c-media-item--content {
-    max-width: 70%;
+    max-width: 65%;
   }
 }
 
